# matternotifier

./: .gitignore  Cargo.toml  db.rs  rogchat.toml
matternotifier/: Cargo.toml
matternotifier/src/: main.rs
mm/: Cargo.toml
mm/docs/: BotsApi.md  BrandApi.md  ChannelsApi.md  ComplianceApi.md  DataretentionApi.md  EmojiApi.md  FilesApi.md  InlineObject57.md  InlineObject59.md  InlineObject62.md  InlineObject63.md  InlineObject64.md  InlineObject65.md  InlineObject66.md  InlineObject67.md  InlineObject68.md  InlineObject71.md  InlineObject72.md  InlineObject73.md  InlineObject74.md  InlineObject77.md  InlineObject78.md  InlineObject79.md  InlineObject80.md  InlineObject82.md  InlineObject83.md  InlineObject84.md  InlineObject85.md  InlineObject86.md  InlineObject87.md  InlineObject88.md  InlineObject89.md  InlineObject91.md  InlineObject93.md  InlineResponse20012.md  InlineResponse20014.md  IntegrationActionsApi.md  LDAPApi.md  OpenGraphApi.md  PluginsApi.md  (+8 more)
mm/src/: gitlab.rs  lib.rs  posts.rs  websocket.rs
mm/src/apis/: bleve_api.rs  bots_api.rs  brand_api.rs  channels_api.rs  client.rs  cluster_api.rs  commands_api.rs  compliance_api.rs  dataretention_api.rs  elasticsearch_api.rs  emoji_api.rs  files_api.rs  groups_api.rs  integration_actions_api.rs  jobs_api.rs  ldap_api.rs  mod.rs  o_auth_api.rs  open_graph_api.rs  plugins_api.rs  posts_api.rs  preferences_api.rs  reactions_api.rs  request.rs  roles_api.rs  root_api.rs  saml_api.rs  schemes_api.rs  status_api.rs  system_api.rs  teams_api.rs  terms_of_service_api.rs  users_api.rs  webhooks_api.rs
(+102 files in other folders)
