[package]
name = "matternotifier"
version = "0.1.0"
authors = ["Guillaume Leroi <leroi.g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm = { path = "../mm" }
serde_json = { version = "1.0" }
tungstenite = { version = "0.11", features = ["tls"] }
sqlx = { version = "0.3.5", features = ["sqlite", "time"] }
