[package]
name = "mm"
version = "0.1.0"
authors = ["Guillaume Leroi <guillaume@leroi.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json", "cookies"] }
url = { version = "2.1" }
scraper = { version= "0.12" }
serde = { version = "1.0"}
serde_json = { version = "1.0"}
chrono = { version = "0.4" }